# minidlna

./: .gitignore  CMakeLists.txt  Makefile.am  README  albumart.c  albumart.h  clients.c  clients.h  configure.ac  daemonize.c  getifaddr.c  image_utils.c  inotify.c  libav.h  metadata.c  minidlna.c  minidlna.conf  minidlna.conf.5  minidlnatypes.h  minissdp.c  minissdp.h  monitor.c  naturalsort.c  options.c  options.h  process.c  scanner.c  scanner.h  scanner_sqlite.h  sql.c  sql.h  upnpglobalvars.c  upnpglobalvars.h  upnphttp.c  upnpsoap.c  upnpsoap.h  utils.c  utils.h  video_thumb.c  video_thumb.h
cmake/: config.h.in  features.cmake
cmake/tests/: test_daemon.c  test_dirent_DIR.c  test_linux_sendfile.c  test_mreq.c  test_mreqn.c  test_scandir_const.c
po/: nl.po
tagutils/: tagutils-opus.c  tagutils-opus.h  tagutils.c
